<resources>
    <string name="app_name">SchedulingApp</string>
    <string name="text_hello">Hello,</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_input_your_mail">Input your email</string>
    <string name="text_input_your_password">Input your password</string>
    <string name="text_login">Login</string>
    <string name="text_or">or</string>
    <string name="text_sign_in_with_gmail">Sign in with Gmail</string>
    <string name="text_dont_have_account">Don\'t have an account yet? </string>
    <string name="text_register">Register</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_input_name">Input your name </string>
    <string name="text_login_with_gmail">Login with Gmail</string>
    <string name="text_sign_up_with_gmail">Sign up with Gmail</string>
    <string name="text_have_account">Already have an account? </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_profile">Profile</string>
    <string name="sample_date">20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_create_task">Create Task</string>
    <string name="text_title">Title</string>
    <string name="text_input_title_task">Input your title task</string>
    <string name="text_subject">Subject</string>
    <string name="text_input_subject_task">Input your subject task</string>
    <string name="text_description">Description</string>
    <string name="text_input_description_task">Input your description task</string>
    <string name="text_time">Time</string>
    <string name="text_start">Start</string>
    <string name="text_end">End</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_upload_file">Upload all file</string>
    <string name="text_file">File</string>
    <string name="text_status">Status</string>
    <string name="task_is_pending">Tugas pending</string>
</resources>